Fixed dragging apps out of bounds

--- a/src/components/appWindow.css
+++ b/src/components/appWindow.css
@@ -81,8 +81,8 @@
     max-width: 100%;
     max-height:100%;
     background-color: white;
-    overflow:hidden;
     height:100%;
+    overflow: scroll;
 }
 
 /* Left side of app gradient
